Fix horizontal scrolling on mobile (#63)

--- a/Styling/styles/styles.css
+++ b/Styling/styles/styles.css
@@ -5,6 +5,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow-x: hidden;
+}
+
 ._button_normal {
   @apply  text-gray-800 bg-bellow-500 p-2 rounded-lg no-underline;
   &:hover {
@@ -73,7 +77,7 @@ body.more-active {
     @apply relative z-0;
   }
   & > header > nav {
-    @apply bg-white w-screen absolute top-0 left-0 right-0 p-2 flex flex-col items-stretch bg-opacity-90 z-50 duration-1000;
+    @apply bg-white absolute top-0 left-0 right-0 p-2 flex flex-col items-stretch bg-opacity-90 z-50 duration-1000;
     transition-property: top;
     @apply shadow-lg;
     & > ol.more {
@@ -1276,7 +1280,7 @@ body.articles, body.tutorials {
       img {
         @apply w-full mt-4 h-40 object-cover sm:h-48 md:h-64 lg:h-80 xl:h-96;
         &.full-size {
-          @apply w-auto h-auto;
+          @apply w-auto h-auto max-w-full;
           @apply xl:max-w-2xl xl:mx-auto;
         }
         &.contained{
@@ -1312,7 +1316,8 @@ body.articles, body.tutorials {
         @apply my-4;
       }
       pre code {
-        @apply whitespace-pre-wrap text-xs font-extralight p-4 bg-gray-900 text-white block my-4 lg:text-base lg:p-8;      
+        @apply whitespace-pre-wrap text-xs font-extralight p-4 bg-gray-900 text-white block my-4 lg:text-base lg:p-8;
+        overflow-x: auto;
 
         .keyword {
           @apply font-bold;
